# CoTrace

./: CMakeLists.txt  README.md  example.js  example_ios.js
.github/workflows/: ci.yml
docs/: architecture.md
src/: CallbackContext.cpp  CallbackContext.h  GumTrace.cpp  GumTrace.h  compat.h  main.cpp
